--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "php-open-source-saver/jwt-auth": "^2.0"
     },
     "require-dev": {
+        "beyondcode/laravel-dump-server": "^1.8",
         "fakerphp/faker": "^1.9.1",
         "friendsofphp/php-cs-fixer": "^3.12",
         "laravel/pint": "^1.0",
